<resources>
    <string name="app_name">LiftPress</string>
    <string name="textView3">Weight Loss</string>
    <string name="t1">Workout Plans</string>
    <string name="textView2">Calorie Burn</string>
    <string name="textView4">Weight Gain</string>
    <string name="textView5">Muscle Gain</string>
    <string name="button8">Go</string>
    <string name="button">Go</string>
    <string name="button2">Go</string>
    <string name="button3">Go</string>
    <string name="button4">Go</string>
    <string name="tx1">Calorie Burn</string>
    <string name="tx3">1.Seated chest press (10 reps x 4 sets)</string>
    <string name="textView8">2.Wide grip lat pulldown (10 reps x 4 sets)</string>
    <string name="textView9">3.Seated leg press (10 reps x 4 sets)</string>
    <string name="textView10">4.Dumbbell seated shoulder press (10 reps x 4 sets)</string>
    <string name="txx">Calorie Burn</string>
    <string name="txx1">Seated chest press (10 reps x 4 sets)</string>
    <string name="txx3">Wide grip lat pulldown (10 reps x 4 sets)</string>
    <string name="txx4">Seated leg press (10 reps x 4 sets)</string>
    <string name="txx5">Dumbbell seated shoulder press (10 reps x 4 sets)</string>
    <string name="txx6">Dumbbell bicep curls (10 reps x 4 sets)</string>
    <string name="todo">TODO</string>
    <string name="a1">Weight Gain</string>
    <string name="a2">2 min rower</string>
    <string name="a3">Alternating side plank (45 secs)</string>
    <string name="a4">Bicep curl to shoulder press (45 secs)</string>
    <string name="a5">Benched tricep dips (45 secs)</string>
    <string name="a6">Squat jumps (45 secs)</string>
    <string name="b1">Weight Loss</string>
    <string name="b2">Plate thrusters (15 reps x 3 sets)</string>
    <string name="b3">Mountain climbers (20 reps x 3 sets)</string>
    <string name="b4">Box jumps (10 reps x 3 sets)</string>
    <string name="b5">Walk outs (10 reps x 3 sets)</string>
    <string name="b6">Renegade rows (full plank/kneeling) (10 each side x 3 sets)</string>
    <string name="c1">Muscle Gain</string>
    <string name="C2">Seated chest press (10 reps x 4 sets)</string>
    <string name="C3">Seated rows (10 reps x 4 sets)</string>
    <string name="C4">Wide grip lat pulldown (10 reps x 4 sets)</string>
    <string name="C5">Seated leg press (10 reps x 4 sets)</string>
    <string name="C6">Dumbbell seated shoulder press (10 reps x 4 sets)</string>
    <string name="textView6">Add Personal Workout Plan</string>
    <string name="button5">Add Personal Workout Plan</string>
    <string name="tv_dietPlans"> Diet Plans and Recommendations</string>
    <string name="btn_military">Military Diets</string>
    <string name="img_first">firstPage</string>
    <string name="btn_other">Personalized Plans</string>
    <string name="btn_veg1">Vegetarian Diets</string>
    <string name="tv_veg2">Numerous studies have shown that a vegetarian diet is one of the most effective for maintaining health. Plant-based diets are healthier than diets where meat is consumed, whether measured by the occurrence of heart disease, cancer, or death.Plant sources include soy products and meat substitutes, legumes, lentils, nuts, seeds, and whole grains.</string>
    <string name="tv_military">The military diet requires people to follow a low-calorie diet for 3 days and then return to regular eating for 4 days. Across the first 3 days, the diet restricts daily calorie intake to 1,400, 1,200, and 1,100 calories. The diet is high in protein and low in fat, carbohydrate, and calories.The following list contains the items of food that people will need to buy for the first 3 days of a week on the military diet: caffeinated coffee or tea, one grapefruit, two bananas, two apples, whole-wheat bread, peanut butter, eggs, three cans of tuna.</string>
    <string name="tv_veg">Eat a variety of fruit and vegetables every day Try to eat at least 5 80g portions of fresh, frozen, canned, dried or juiced fruit and vegetables a day. As well as vitamins and minerals, fruit and vegetables provide fibre, which can help digestion and prevents constipation.</string>
    <string name="tv_topicVeg">Vegetarian Diets</string>
    <string name="btn_started">Get Started -></string>
    <string name="btn_createNew"> + Create New Plan</string>
    <string name="btn_created">View My Plans</string>
    <string name="btn_savePlan">Save</string>
    <string name="btn_view">View</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_edit">Edit</string>
    <string name="tv_name">Plan Name : </string>
    <string name="tv_Q1">Name of the Plan</string>
    <string name="et_A1"> </string>
    <string name="tv_Q2">Breakfast</string>
    <string name="et_A2"> </string>
    <string name="tv_Q3">Lunch</string>
    <string name="et_A3" />
    <string name="tv_Q4">Snack / Tea time</string>
    <string name="et_A4" />
    <string name="tv_Q5">Dinner</string>
    <string name="et_A5" />
    <string name="tv_other">Planning your own meals will allow you to see how much you are actually eating. This also prevents you from overeating at restaurants, which tend to serve a way bigger portion than you should actually be eating.</string>
    <string name="et_title">Give a name</string>
    <string name="et_breakfast">enter the food you prefer</string>
    <string name="et_lunch">enter the food you prefer</string>
    <string name="et_tea">enter the food you prefer</string>
    <string name="et_dinner">enter the food you prefer</string>
    <string name="TextViewVeg">Numerous studies have shown that a vegetarian diet is one of the most effective for maintaining health.</string>
    <string name="viewarticle1">About Diet Plans</string>
    <string name="TextVeiw5">About Diet Plans</string>
    <string name="category">Category</string>
    <string name="typeproblem">type</string>
    <string name="button18">Done</string>
    <string name="donebutton">Done</string>
    <string name="canclebutton">CANCLE</string>
    <string name="dietbutton">Diet</string>
    <string name="workoutsbutton">Workouts</string>
    <string name="lossweightbutton">Loss Weight</string>
    <string name="mostexercise">7 most exercises to do at home</string>
    <string name="aboutdiet">About Diets Plans</string>
    <string name="aboutdiets">About Diet Plans</string>
    <string name="homebtn1">Workout Plans</string>
    <string name="homebtn2">Diet Plans</string>
    <string name="homebtn3">Articles</string>

</resources>