<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context="com.example.fit.Form">

    <TextView
        android:id="@+id/tv_Q1"
        android:layout_width="170dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="18dp"
        android:background="@color/white"
        android:text="@string/tv_Q1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Q2"
        app:layout_constraintEnd_toStartOf="@+id/et_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_breakfast"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="191dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:fontFamily="cursive"
        android:inputType="textPersonName"
        android:text="@string/et_breakfast"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Q3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Q2" />

    <TextView
        android:id="@+id/tv_Q2"
        android:layout_width="381dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:background="@color/white"
        android:backgroundTintMode="screen"
        android:fontFamily="serif"
        android:text="@string/tv_Q2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_breakfast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Q1" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="203dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:fontFamily="cursive"
        android:inputType="textPersonName"
        android:text="@string/et_title"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_Q1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_Q1" />

    <TextView
        android:id="@+id/tv_Q3"
        android:layout_width="385dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:text="@string/tv_Q3"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_lunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_breakfast" />

    <EditText
        android:id="@+id/et_lunch"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:fontFamily="cursive"
        android:inputType="textPersonName"
        android:text="@string/et_lunch"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Q4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Q3" />

    <TextView
        android:id="@+id/tv_Q4"
        android:layout_width="388dp"
        android:layout_height="39dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        android:text="@string/tv_Q4"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_tea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lunch" />

    <EditText
        android:id="@+id/et_tea"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:fontFamily="cursive"
        android:inputType="textPersonName"
        android:text="@string/et_tea"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Q5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Q4" />

    <TextView
        android:id="@+id/tv_Q5"
        android:layout_width="381dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:text="@string/tv_Q5"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_dinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tea" />

    <EditText
        android:id="@+id/et_dinner"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="183dp"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:fontFamily="cursive"
        android:inputType="textPersonName"
        android:text="@string/et_dinner"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Q5" />

    <Button
        android:id="@+id/btn_savePlan"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="108dp"
        android:text="@string/btn_savePlan"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_dinner" />


</androidx.constraintlayout.widget.ConstraintLayout>