<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fit.MainActivity">

    <ImageView
        android:id="@+id/img_first"
        android:layout_width="444dp"
        android:layout_height="233dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:contentDescription="@string/img_first"
        app:layout_constraintBottom_toTopOf="@+id/btn_veg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dietPlans"
        app:srcCompat="@drawable/first" />

    <Button
        android:id="@+id/btn_other"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="349dp"
        android:layout_height="76dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="82dp"
        android:background="@color/black"
        android:text="@string/btn_other"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_military"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_military"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="350dp"
        android:layout_height="74dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:text="@string/btn_military"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:backgroundTint="?attr/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btn_other"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_veg1"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btn_veg1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="350dp"
        android:layout_height="74dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:text="@string/btn_veg1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:backgroundTint="@android:color/holo_blue_light"
        app:layout_constraintBottom_toTopOf="@+id/btn_military"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_first"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_dietPlans"
        android:layout_width="420dp"
        android:layout_height="74dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="60dp"
        android:background="#006C96"
        android:text="@string/tv_dietPlans"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/img_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>